# fractal-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml
changelogs/: changelog-v0.1.0-alpha5.md  changelog-v0.1.0.md  changelog-v0.1.1.md  changelog-v0.1.2.md
res/deb/: fractal-rs-2.desktop
res/deb/scripts/: postinst  postrm
res/shader/generator/: fragment_data.wgsl.liquid  fragment_shader_main.wgsl.liquid  globals.wgsl.liquid  screen_rect_vertex_shader.wgsl.liquid  smoothing.wgsl.liquid
res/shader/generator/util/: color.wgsl.liquid  complex_f32.wgsl.liquid  linear_intersection_f32.wgsl.liquid
src/: args.rs  args.yml  config.rs  main.rs  storage.rs  util.rs
src/generator/: args.rs  color.rs  composite.rs  error.rs  instance_manager.rs  manager.rs  mod.rs  row_stitcher.rs  util.rs  view.rs
src/generator/cpu/: mod.rs  opts.rs
src/generator/gpu/: buffer.rs  gpu_view.rs  mod.rs  multisample.rs  no_multisample.rs  shader.rs  template.wgsl  uniforms.rs  util.rs
src/generator/gpu/shader/: mod.rs  multisample.wgsl  opts.rs  source.rs  template.wgsl
src/generator/gpu/shader/source/: dynamic.rs  mod.rs  static.rs
src/gpu/: buffer.rs  mod.rs  util.rs
src/gpu/util/: backend.rs  mod.rs
src/gui/: flow.rs  keyboard.rs  mod.rs  storage.rs  ui.rs  util.rs  viewer.rs
src/gui/fonts/: mod.rs
src/gui/keyboard/: macros.rs  mod.rs  storage.rs  tracker.rs  tree.rs
src/gui/ui/: file_dialog.rs  instance.rs  mod.rs
src/gui/ui/widgets/: mod.rs  selected_label.rs  shortcut_button.rs  tab_list.rs  util.rs  viewer.rs
src/gui/util/: conversion.rs  mod.rs
src/gui/viewer/: image.wgsl  mod.rs  uniforms.rs
src/liquid/: language.rs  macros.rs  mod.rs  util.rs
src/liquid/blocks/: macros_define.rs  macros_if.rs  mod.rs  whitespace.rs
src/liquid/filters/: macros_call.rs  mod.rs
src/liquid/partials/: composite.rs  file.rs  mod.rs
src/liquid/tags/: macros_call.rs  macros_define.rs  macros_undef.rs  mod.rs
src/logging/: default.log4rs.yaml  fancy_file.rs  mod.rs
src/util/: files.rs  mod.rs  result.rs  running_guard.rs  tests.rs
src/util/future/: future_wrapper.rs  mod.rs
wix/: License.rtf  main.wxs
