[package]
name = "fractal-rs-2"
version = "0.1.0-alpha4"
authors = ["Kneelawk <kneelawk@gmail.com>"]
edition = "2021"
resolver = "2"
license = "MIT"
description = "Simple fractal viewer written in Rust"
repository = "https://github.com/Kneelawk/fractal-rs.git"
keywords = ["fractal", "wgpu"]

[features]
debug-wgpu-trace = ["wgpu/trace"]

[dependencies]
anyhow = "^1.0.43"
async-trait = "^0.1.51"
bytemuck = "^1.7.2"
chrono = "^0.4.19"
chrono-humanize = "^0.2.1"
cgmath = "^0.18.0"
dirs = "^4.0.0"
egui = "^0.15.0"
egui_wgpu_backend = { git = "https://github.com/Kneelawk/egui_wgpu_backend.git", branch = "textureid-with-sampler-options" }
egui_winit_platform = { version = "^0.11.0", features = ["clipboard", "webbrowser"] }
futures = "^0.3.12"
heck = "^0.3.3"
#imgui = "^0.8.0"
#imgui-wgpu = "^0.17.0"
#imgui-winit-support = "^0.8.0"
itertools = "^0.10.1"
lazy_static = "^1.4.0"
log = "^0.4.14"
log4rs = "^1.0.0"
mtpng = { git = "https://github.com/Kneelawk/mtpng.git", branch = "encoder-drop-panic-fix" }
naga = { version = "0.7.2", features = ["wgsl-in", "wgsl-out"] }
num-complex = "^0.3.1"
num_cpus = "^1.13.0"
num-traits = "^0.2.14"
parking_lot = "^0.11.2"
pin-utils = "^0.1.0"
#png = "^0.16.1"
rayon = "^1.5.0"
regex = "^1.4.3"
rfd = "^0.5.1"
ron = "^0.7.0"
serde = "^1.0.127"
strum = "^0.23.0"
strum_macros = "^0.23.1"
thiserror = "^1.0.26"
tokio = { version = "^1.2.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
tokio-stream = { version = "^0.1.7", features = ["sync"] }
winit = "^0.25.0"
wgpu = "^0.11.0"

[profile.release-lto]
inherits = "release"
lto = true

[package.metadata.bundle]
identifier = "com.kneelawk.fractal-rs-2"
copyright = "Copyright (c) 2021 Jed Pommert (Kneelawk)"
category = "GraphicsAndDesign"
deb_depends = ["libgtk-3-0", "libxcb-shape0", "libxcb-xfixes0"]
osx_minimum_system_version = "10.11"
