[package]
name = "fractal-rs-2"
version = "0.1.2"
authors = ["Kneelawk <kneelawk@gmail.com>"]
edition = "2021"
resolver = "2"
license = "LGPLv3"
description = "Simple fractal viewer written in Rust"
repository = "https://github.com/Kneelawk/fractal-rs.git"
keywords = ["fractal", "wgpu"]
readme = "README.md"

[features]
debug-wgpu-trace = ["wgpu/trace"]
prefer-dx12 = []
prefer-metal = []
prefer-vulkan = []

[dependencies]
anyhow = "^1.0.43"
async-trait = "^0.1.51"
bytemuck = "^1.7.2"
chrono = "^0.4.19"
chrono-humanize = "^0.2.1"
cgmath = { version = "^0.18.0", features = ["serde"] }
dirs = "^4.0.0"
egui = "^0.18.1"
egui_wgpu_backend = "^0.18.0"
egui_winit_platform = { version = "^0.15.0", features = ["clipboard", "webbrowser"] }
futures = "^0.3.12"
heck = "^0.3.3"
#imgui = "^0.8.0"
#imgui-wgpu = "^0.17.0"
#imgui-winit-support = "^0.8.0"
include_dir = { version = "^0.7.2", features = ["nightly"] }
itertools = "^0.10.1"
kstring = "^2.0.0"
lazy_static = "^1.4.0"
liquid = "^0.26.0"
liquid-core = "^0.26.0"
liquid-lib = "^0.26.0"
liquid-derive = "^0.26.0"
log = "^0.4.14"
log4rs = "^1.0.0"
mtpng = { git = "https://github.com/Kneelawk/mtpng.git", branch = "encoder-drop-panic-fix" }
naga = { version = "^0.9.0", features = ["wgsl-in", "wgsl-out"] }
num-complex = "^0.3.1"
num_cpus = "^1.13.0"
num-traits = "^0.2.14"
pathdiff = "^0.2.1"
parking_lot = "^0.11.2"
pin-utils = "^0.1.0"
#png = "^0.16.1"
rayon = "^1.5.0"
regex = "^1.4.3"
rfd = "^0.5.1"
ron = "^0.7.0"
serde = "^1.0.127"
strum = "^0.23.0"
strum_macros = "^0.23.1"
thiserror = "^1.0.26"
tokio = { version = "^1.2.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
tokio-stream = { version = "^0.1.7", features = ["sync"] }
winit = { version = "^0.26.1", features = ["wayland", "x11"] }
wgpu = "^0.13.1"

[profile.release]
lto = true

[package.metadata.bundle]
identifier = "com.kneelawk.fractal-rs-2"
copyright = "Copyright (c) 2021 Jed Pommert (Kneelawk)"
category = "GraphicsAndDesign"
osx_minimum_system_version = "10.11"

[package.metadata.deb]
section = "Graphics"
copyright = "Copyright (c) 2021 Jed Pommert (Kneelawk)"
maintainer-scripts = "res/deb/scripts/"
features = ["prefer-vulkan"]
assets = [
    ["target/release/fractal-rs-2", "opt/fractal-rs-2/bin/", "755"],
    ["res/deb/fractal-rs-2.desktop", "usr/share/applications/", "644"],
    ["README.md", "usr/share/doc/fractal-rs-2/", "644"],
    ["COPYING", "usr/share/doc/fractal-rs-2/", "644"],
    ["COPYING.LESSER", "usr/share/doc/fractal-rs-2/", "644"]
]
